--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jenny-Margrethe Vej at 2016-07-25 12:31:59 +0200 
+%% Created for Jenny-Margrethe Vej at 2016-07-27 15:27:18 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{drm,
+	Author = {Daniel Kahneman and Alan B. Krueger and David A. Schkade and Norbert Schwarz and Arthur A. Stone},
+	Date-Added = {2016-07-27 10:00:06 +0000},
+	Date-Modified = {2016-07-27 10:01:34 +0000},
+	Journal = {Science},
+	Number = {5702},
+	Pages = {1776-1780},
+	Title = {A Survey Method for Characterizing Daily Life Experience: The Day Reconstruction Method},
+	Volume = {306},
+	Year = {2004}}
 
 @misc{livinglab,
 	Author = {University of Geneva, mQoL Living Lab},
@@ -119,37 +130,37 @@
 @misc{basis_retriever,
 	Author = {Source Forge},
 	Date-Added = {2015-12-20 16:52:07 +0000},
-	Date-Modified = {2016-07-24 16:13:45 +0000},
+	Date-Modified = {2016-07-27 13:24:22 +0000},
 	Howpublished = {http://sourceforge.net/projects/basisretriever/},
-	Month = {Visited: December},
+	Month = {Visited: July},
 	Title = {Basis Retriever},
 	Year = {2015}}
 
 @misc{basis,
 	Date-Added = {2015-12-20 16:19:20 +0000},
-	Date-Modified = {2016-07-24 16:13:35 +0000},
+	Date-Modified = {2016-07-27 13:24:32 +0000},
 	Howpublished = {http://www.mybasis.com/},
-	Month = {Visited: December},
+	Month = {Visited: July},
 	Title = {Basis Peak},
-	Year = {2015}}
+	Year = {2016}}
 
 @misc{fitbit,
 	Author = {Fitbit},
 	Date-Added = {2015-12-20 15:57:09 +0000},
-	Date-Modified = {2016-07-24 16:14:39 +0000},
+	Date-Modified = {2016-07-27 13:26:05 +0000},
 	Howpublished = {https://www.fitbit.com/uk/surge},
-	Month = {Visited: December},
+	Month = {Visited: July},
 	Title = {Fitbit Surge},
-	Year = {2015}}
+	Year = {2016}}
 
 @misc{fitbit_dev,
 	Author = {Fitbit},
 	Date-Added = {2015-12-20 14:59:52 +0000},
-	Date-Modified = {2016-07-24 16:15:49 +0000},
+	Date-Modified = {2016-07-27 13:27:17 +0000},
 	Howpublished = {https://dev.fitbit.com/docs/sleep/},
-	Month = {Visited: December},
+	Month = {Visited: July},
 	Title = {Sleep Logs},
-	Year = {2015}}
+	Year = {2016}}
 
 @article{toss,
 	Author = {Jun-Ki Min and Afsaneh Doryab and Jason Wiese and Shahriyar Amini and John Zimmerman and Jason I. Hong},
@@ -187,11 +198,11 @@
 @misc{bewellDartmouth,
 	Author = {Andrew T. Campbell},
 	Date-Added = {2015-10-17 11:59:31 +0000},
-	Date-Modified = {2016-07-24 16:14:29 +0000},
-	Howpublished = {http://www.cs.dartmouth.edu/~campbell/},
-	Month = {Visited: December},
+	Date-Modified = {2016-07-27 13:22:19 +0000},
+	Howpublished = {http://www.cs.dartmouth.edu/$\sim$campbell/},
+	Month = {Visited: July},
 	Title = {BeWell},
-	Year = {2015}}
+	Year = {2016}}
 
 @misc{mQOL,
 	Author = {Katarzyna Wac and Mattia Gustarini and Jerome Marchanoff and Marios Fanourakis and Christiana Tsiourti and Matteo Ciman and Jody Hausmann and Gerardo Pinar},
